--- a/config/r7800.config
+++ b/config/r7800.config
@@ -45,7 +45,7 @@ CONFIG_PACKAGE_luci-app-qos-gargoyle=y #Gargoyle QoS流控
 # CONFIG_PACKAGE_luci-app-filebrowser is not set #文件浏览器
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 # CONFIG_PACKAGE_luci-app-autoreboot is not set #定时重启
-# CONFIG_PACKAGE_luci-app-frpc is not set #Frp内网穿透
+CONFIG_PACKAGE_luci-app-frpc=y #Frp内网穿透
 CONFIG_PACKAGE_luci-app-frps=y #Frp内网穿透服务器
 CONFIG_PACKAGE_luci-app-upnp=y #通用即插即用UPnP(端口自动转发)
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
@@ -59,12 +59,12 @@ CONFIG_PACKAGE_luci-app-ddns=y #DDNS服务
 # CONFIG_PACKAGE_luci-app-control-webrestriction is not set #访问限制
 # CONFIG_PACKAGE_luci-app-control-weburl is not set #网址过滤
 # CONFIG_PACKAGE_luci-app-zerotier is not set #ZeroTier内网穿透
-# CONFIG_PACKAGE_luci-app-accesscontrol is not set #访问时间控制
+CONFIG_PACKAGE_luci-app-accesscontrol=y #访问时间控制
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set #宽带流量监控
 # CONFIG_PACKAGE_luci-app-flowoffload is not set #Turbo ACC 网络加速
 # CONFIG_PACKAGE_luci-app-guest-wifi is not set #WiFi访客网络
 # CONFIG_PACKAGE_luci-app-netdata is not set #Netdata实时监控(图表)
-CONFIG_PACKAGE_luci-app-cpufreq=y #CPU 性能优化调节
+# CONFIG_PACKAGE_luci-app-cpufreq is not set #CPU 性能优化调节
 CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
 # CONFIG_PACKAGE_luci-theme-bootstrap is not set
