--- a/config/r7800.config
+++ b/config/r7800.config
@@ -9,7 +9,7 @@ CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_luci-app-oaf=y #应用过滤
 CONFIG_PACKAGE_luci-app-serverchan=y #微信推送
-CONFIG_PACKAGE_luci-app-adguardhome=y #ADguardHome去广告服务
+# CONFIG_PACKAGE_luci-app-adguardhome is not set #ADguardHome去广告服务
 # CONFIG_PACKAGE_luci-app-smartdns-compat is not set #SmartDns服务
 CONFIG_PACKAGE_luci-app-unblockmusic=y #解锁网易云灰色歌曲
 CONFIG_UnblockNeteaseMusic_Go=y #解锁网易云灰色歌曲
@@ -41,7 +41,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y #adbyby去广告	
 # CONFIG_PACKAGE_luci-app-webadmin is not set #Web管理页面设置
 # CONFIG_PACKAGE_luci-app-filetransfer is not set #系统-文件传输
-CONFIG_PACKAGE_luci-app-qos-gargoyle=y #Gargoyle QoS流控
+# CONFIG_PACKAGE_luci-app-qos-gargoyle is not set #Gargoyle QoS流控
 # CONFIG_PACKAGE_luci-app-filebrowser is not set #文件浏览器
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 # CONFIG_PACKAGE_luci-app-autoreboot is not set #定时重启
