--- a/config/3800.config
+++ b/config/3800.config
@@ -3,11 +3,11 @@ CONFIG_TARGET_ar71xx_generic=y
 CONFIG_TARGET_ar71xx_generic_DEVICE_wndr3800=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_ipv6helper=y
-# CONFIG_PACKAGE_luci-app-oaf is not set #应用过滤
+CONFIG_PACKAGE_luci-app-oaf=y #应用过滤
 # CONFIG_PACKAGE_luci-app-serverchan is not set #微信推送
 # CONFIG_PACKAGE_luci-app-adguardhome is not set #ADguardHome去广告
 # CONFIG_PACKAGE_luci-app-smartdns-compat is not set #SmartDns服务
-CONFIG_PACKAGE_luci-app-unblockmusic=y #解锁网易云灰色歌
+# CONFIG_PACKAGE_luci-app-unblockmusic is not set #解锁网易云灰色歌
 # CONFIG_PACKAGE_luci-app-passwall is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ipt2socks is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks is not set
