--- a/config/3800.config
+++ b/config/3800.config
@@ -17,7 +17,6 @@ CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
@@ -46,60 +45,39 @@ CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libstdcpp=y
-# CONFIG_PACKAGE_luci-app-oaf is not set #应用过滤
-# CONFIG_PACKAGE_luci-app-serverchan is not set #微信推送
-# CONFIG_PACKAGE_luci-app-adguardhome is not set #ADguardHome去广告服务
-# CONFIG_PACKAGE_luci-app-smartdns-compat is not set #SmartDns服务
-# CONFIG_PACKAGE_luci-app-unblockmusic is not set #解锁网易云灰色歌曲
-# CONFIG_UnblockNeteaseMusic_Go is not set #解锁网易云灰色歌曲
-# CONFIG_PACKAGE_luci-app-passwall is not set
-CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin is not set
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+# CONFIG_PACKAGE_luci-app-accesscontrol is not set
+# CONFIG_PACKAGE_luci-app-autoreboot is not set
+# CONFIG_PACKAGE_luci-app-filetransfer is not set
+# CONFIG_PACKAGE_luci-app-mwan3 is not set
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
+# CONFIG_PACKAGE_luci-app-ramfree is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+# CONFIG_PACKAGE_luci-app-samba is not set
+# CONFIG_PACKAGE_luci-app-sqm is not set
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
-CONFIG_PACKAGE_luci-app-adbyby-plus=y #adbyby去广告	
-# CONFIG_PACKAGE_luci-app-webadmin is not set #Web管理页面设置
-# CONFIG_PACKAGE_luci-app-filetransfer is not set #系统-文件传输
-# CONFIG_PACKAGE_luci-app-qos-gargoyle is not set #Gargoyle QoS流控
-# CONFIG_PACKAGE_luci-app-filebrowser is not set #文件浏览器
-# CONFIG_PACKAGE_luci-app-autoreboot is not set #定时重启
-CONFIG_PACKAGE_luci-app-frpc=y #Frp内网穿透
-# CONFIG_PACKAGE_luci-app-frps is not set #Frp内网穿透服务器
-# CONFIG_PACKAGE_luci-app-upnp is not set #通用即插即用UPnP(端口自动转发)
-# CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
-# CONFIG_PACKAGE_luci-app-vlmcsd is not set #KMS激活服务器
-CONFIG_PACKAGE_luci-app-sfe=y
-# CONFIG_PACKAGE_luci-app-kodexplorer is not set 
-# CONFIG_PACKAGE_luci-app-sqm is not set #SQM智能队列管理
-# CONFIG_PACKAGE_luci-app-ddns is not set #DDNS服务
-# CONFIG_PACKAGE_luci-app-vsftpd is not set #FTP服务器
-# CONFIG_PACKAGE_luci-app-wol is not set #网络唤醒
-# CONFIG_PACKAGE_luci-app-control-mia is not set #时间控制
-# CONFIG_PACKAGE_luci-app-control-timewol is not set #定时唤醒
-# CONFIG_PACKAGE_luci-app-control-webrestriction is not set #访问限制
-# CONFIG_PACKAGE_luci-app-control-weburl is not set #网址过滤
-# CONFIG_PACKAGE_luci-app-zerotier is not set #ZeroTier内网穿透
-# CONFIG_PACKAGE_luci-app-accesscontrol is not set #访问时间控制
-# CONFIG_PACKAGE_luci-app-nlbwmon is not set #宽带流量监控
-# CONFIG_PACKAGE_luci-app-flowoffload is not set #Turbo ACC 网络加速
-# CONFIG_PACKAGE_luci-app-guest-wifi=y #WiFi访客网络
-# CONFIG_PACKAGE_luci-app-netdata is not set #Netdata实时监控(图表)
-# CONFIG_PACKAGE_luci-app-cpufreq is not set #CPU 性能优化调节
-CONFIG_PACKAGE_luci-theme-argon=y
-# CONFIG_PACKAGE_luci-theme-atmaterial is not set
-# CONFIG_PACKAGE_luci-theme-bootstrap is not set
-# CONFIG_PACKAGE_luci-theme-material=y
-# CONFIG_PACKAGE_luci-theme-bootstrap-mod is not set
-# CONFIG_PACKAGE_luci-theme-netgear is not set
-# CONFIG_PACKAGE_luci-theme-rosy is not set
-# CONFIG_PACKAGE_luci-theme-Butterfly is not set
-# CONFIG_PACKAGE_luci-theme-Butterfly-dark is not set
-# CONFIG_PACKAGE_luci-theme-opentomato is not set
-# CONFIG_PACKAGE_luci-theme-opentomcat is not set
-# CONFIG_PACKAGE_luci-theme-argon-mod is not set
-# CONFIG_PACKAGE_luci-theme-darkmatter is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
+CONFIG_PACKAGE_luci-app-syncdial=y
+CONFIG_PACKAGE_luci-app-udpxy=y
+# CONFIG_PACKAGE_luci-lib-fs is not set
+CONFIG_PACKAGE_luci-theme-netgear=y
+# CONFIG_PACKAGE_nlbwmon is not set
+CONFIG_PACKAGE_redsocks2=y
+CONFIG_PACKAGE_shadowsocksr-libev-server=y
+CONFIG_PACKAGE_tc=y
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_udpxy=y
+CONFIG_PACKAGE_v2ray=y
+CONFIG_V2RAY_COMPRESS_GOPROXY=y
+CONFIG_V2RAY_COMPRESS_UPX=y
+CONFIG_V2RAY_DISABLE_NONE=y
+CONFIG_V2RAY_EXCLUDE_ASSETS=y
+CONFIG_V2RAY_EXCLUDE_V2CTL=y
+CONFIG_V2RAY_JSON_INTERNAL=y
+CONFIG_boost-compile-visibility-hidden=y
+CONFIG_boost-runtime-shared=y
+CONFIG_boost-static-and-shared-libs=y
+CONFIG_boost-variant-release=y
