--- a/config/r7800.config
+++ b/config/r7800.config
@@ -3,7 +3,6 @@ CONFIG_TARGET_ipq806x_generic_DEVICE_netgear_r7800=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_antfs-mount=y
 CONFIG_PACKAGE_automount=y
-CONFIG_DEFAULT_block-mount=y
 CONFIG_PACKAGE_kmod-fs-nfs=y
 CONFIG_PACKAGE_kmod-fs-nfs-common=y
 CONFIG_PACKAGE_kmod-fs-nfs-v3=y
@@ -80,7 +79,7 @@ CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
 # CONFIG_PACKAGE_luci-theme-bootstrap is not set
-# CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_luci-theme-material is not set
 # CONFIG_PACKAGE_luci-theme-bootstrap-mod is not set
 # CONFIG_PACKAGE_luci-theme-netgear is not set
 # CONFIG_PACKAGE_luci-theme-rosy is not set
