--- a/config/r7800.config
+++ b/config/r7800.config
@@ -3,6 +3,10 @@ CONFIG_TARGET_ipq806x_generic_DEVICE_netgear_r7800=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_antfs-mount=y
 CONFIG_PACKAGE_automount=y
+CONFIG_PACKAGE_kmod-fs-antfs=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-fs-nfs=y
 CONFIG_PACKAGE_kmod-fs-nfs-common=y
 CONFIG_PACKAGE_kmod-fs-nfs-v3=y
