--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -34,7 +34,7 @@ CONFIG_PACKAGE_kmod-fs-nfs-v4=y
 CONFIG_PACKAGE_kmod-fs-nfsd=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 
-# Network Devices
+# 网卡驱动
 CONFIG_PACKAGE_kmod-3c59x=y
 CONFIG_PACKAGE_kmod-8139cp=y
 CONFIG_PACKAGE_kmod-8139too=y
