--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -197,7 +197,7 @@ CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
 CONFIG_PACKAGE_kmod-usb-serial-ti-usb=y
 CONFIG_PACKAGE_kmod-usb-serial-xr_usb_serial_common=y
 
-# Wireless Drivers
+# Wireless 驱动
 CONFIG_B43LEGACY_FW_SQUASH=y
 CONFIG_B43LEGACY_FW_SQUASH_COREREVS="1,2,3,4"
 CONFIG_B43_FW_5_100_138=y
