--- a/config/x86_64.config
+++ b/config/x86_64.config
@@ -562,7 +562,7 @@ CONFIG_PACKAGE_comgt=y
 CONFIG_PACKAGE_kmod-usb-acm=y
 CONFIG_PACKAGE_luci-proto-3g=y
 
-# Mobile Net Sharing移动共享
+# Mobile Net Sharing移动网共享
 CONFIG_PACKAGE_libimobiledevice-utils=y
 CONFIG_PACKAGE_libplist-utils=y
 CONFIG_PACKAGE_libusbmuxd-utils=y
